--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -62,11 +62,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "aH7AHezVAoYy",
-        "outputId": "2c5d7b21-2b50-4c4c-a756-2122fc854125",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aH7AHezVAoYy",
+        "outputId": "2c5d7b21-2b50-4c4c-a756-2122fc854125"
       },
       "outputs": [
         {
@@ -101,11 +101,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "VaSkMAtnAoY1",
-        "outputId": "33a6e2f3-b51a-4d3c-b347-7ba9bd238df4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VaSkMAtnAoY1",
+        "outputId": "33a6e2f3-b51a-4d3c-b347-7ba9bd238df4"
       },
       "outputs": [
         {
@@ -130,11 +130,11 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "cTAeU04VAoY3",
-        "outputId": "5359255e-fc47-44ba-bf6f-595bae3e7bd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cTAeU04VAoY3",
+        "outputId": "5359255e-fc47-44ba-bf6f-595bae3e7bd6"
       },
       "outputs": [
         {
@@ -172,13 +172,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "jbs9n9oVAoY-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jbs9n9oVAoY-",
+        "outputId": "94b09db5-917e-4e6e-e91e-aa7de5c3cc1d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8080\n",
+            "The number 80 is even number\n",
+            "8090\n",
+            "The number 90 is even number\n"
+          ]
+        }
+      ],
       "source": [
-        "number = int(input('Enter a number'))\n",
+        "number = int(input('80'))\n",
+        "if number % 2 == 0:\n",
+        "    print (f'The number {number} is even number')\n",
+        "number = int(input('80'))\n",
         "if number % 2 == 0:\n",
         "    print (f'The number {number} is even number')\n",
         "else:\n",
@@ -200,13 +218,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "W0uCD8kVAoZA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W0uCD8kVAoZA",
+        "outputId": "24dc4abe-a6da-4560-a01b-a1835425e3e9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter a number85\n"
+          ]
+        }
+      ],
       "source": [
-        "number = int(input('Enter a number'))\n",
+        "number = int(input('enter a number'))\n",
         "\n",
         "# Complete the code"
       ]
@@ -226,18 +256,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "l2UPU1IYAoZB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l2UPU1IYAoZB",
+        "outputId": "8e40e610-25e5-4c33-a3d0-49de2f7ad132"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a nameAn\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "name = input('Enter a name')\n",
+        "name = input('enter a name')\n",
         "\n",
-        "if # complete the code\n",
-        "    result = True\n",
-        "\n",
-        ""
+        "# Decide whether the name starts with 'A' and print True or False\n",
+        "if name.startswith('A'):\n",
+        "    print(True)\n",
+        "else:\n",
+        "      print(False)\n",
+        "\n"
       ]
     },
     {
@@ -256,11 +301,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "l27TBz5PAoZB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l27TBz5PAoZB",
+        "outputId": "d415b4be-56cb-4f8a-f49f-dcea43552b4d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Two value are same\n"
+          ]
+        }
+      ],
       "source": [
         "val1 = 12.34; val2 = 12.340000000000000001\n",
         "\n",
@@ -270,13 +327,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "zZmQuXKbAoZC"
       },
       "outputs": [],
       "source": [
-        "val1 = 12.34; val2 = 12.340000000001\n",
+        "val1 = 10.12; val2 = 10.12000000000001\n",
         "\n",
         "if val1 == val2:\n",
         "    print ('Two value are same')"
@@ -299,16 +356,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "RFSNcH7DAoZD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RFSNcH7DAoZD",
+        "outputId": "eca5da24-6b2f-43e0-ca35-60efed3db91b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a wordHeaven\n",
+            "Enter a wordTru\n",
+            "Tru\n"
+          ]
+        }
+      ],
       "source": [
         "strval1 = input('Enter a word')\n",
         "strval2 = input('Enter a word')\n",
         "\n",
-        "# complete the code"
+        "# complete the code\n",
+        "if strval1 > strval2:\n",
+        "    print (strval1)\n",
+        "else:\n",
+        "    print (strval2)"
       ]
     },
     {
