--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -404,16 +404,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "_lJAJ-ORAoZD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_lJAJ-ORAoZD",
+        "outputId": "56472b17-081b-4453-e967-72ed52882c57"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a wordsee\n",
+            "Enter a wordend\n",
+            "end\n"
+          ]
+        }
+      ],
       "source": [
         "strval1 = input('Enter a word')\n",
         "strval2 = input('Enter a word')\n",
         "\n",
-        "# complete the code\n"
+        "# complete the code\n",
+        "if len(strval1) > len(strval2):\n",
+        "    print (strval1)\n",
+        "else:\n",
+        "    print (strval2)"
       ]
     },
     {
@@ -458,11 +476,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "kVtKfgizAoZH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kVtKfgizAoZH",
+        "outputId": "c06ac351-ad7d-4f18-a717-9878300ec8e6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your score75\n",
+            "The grade : C\n"
+          ]
+        }
+      ],
       "source": [
         "# Take one user input\n",
         "# if it is even number, print\n",
@@ -479,11 +510,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "f72DjOVxAoZH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f72DjOVxAoZH",
+        "outputId": "722b83bc-d2cd-47c5-afd9-930b9a7e4f42"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your score88\n",
+            "The score  88  is great than 80\n"
+          ]
+        }
+      ],
       "source": [
         "x = int(input(\"Enter your score\"))\n",
         "\n",
@@ -515,15 +559,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "sEATH7HtAoZH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sEATH7HtAoZH",
+        "outputId": "643680cc-645b-4cd5-a2b9-1a7a854f8b40"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a score89\n",
+            "B\n"
+          ]
+        }
+      ],
       "source": [
         "score = int(input('Enter a score'))\n",
         "\n",
-        "# complete the code\n"
+        "# complete the code\n",
+        "if score > 90:\n",
+        "    print ('A')\n",
+        "elif score > 80:\n",
+        "    print ('B')\n",
+        "\n"
       ]
     },
     {
@@ -544,15 +606,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "qXJHp45PAoZI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qXJHp45PAoZI",
+        "outputId": "b5d57ea6-f3f4-426b-b8f1-4af7e886ef13"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number71\n",
+            "Odd\n"
+          ]
+        }
+      ],
       "source": [
         "number = int(input('Enter a number'))\n",
         "\n",
-        "# complete the code\n"
+        "# complete the code\n",
+        "if number == 0:\n",
+        "    print ('Zero')\n",
+        "elif number % 2 == 0:\n",
+        "    print ('Even')\n",
+        "else:\n",
+        "    print ('Odd')\n"
       ]
     },
     {
@@ -578,15 +659,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "8Jo5wGSkAoZJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Jo5wGSkAoZJ",
+        "outputId": "2102d5f8-fde3-4be4-89a3-e0c24e7e131d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number12\n",
+            "Case 2\n"
+          ]
+        }
+      ],
       "source": [
         "number = int(input('Enter a number'))\n",
         "\n",
-        "# complete the code"
+        "# complete the code\n",
+        "if number < 0:\n",
+        "    print ('Case 1')\n",
+        "elif number < 100:\n",
+        "    print ('Case 2')\n",
+        "else:\n",
+        "    print ('Case 3')"
       ]
     },
     {
