--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -720,17 +720,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "5Zu60xolAoZK",
-        "outputId": "659776c0-41e9-493c-9abb-622d88768320"
+        "outputId": "d8af2fde-badd-474d-bc17-df7ba9b9633d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "100  is greater thatn 100\n"
+            "Enter your number50\n",
+            "50  is greater than or equal to 50 and less than 100\n"
           ]
         }
       ],
@@ -750,18 +754,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "pOP2-H4NAoZM",
-        "outputId": "818d9af2-f1d0-4af6-fc18-4e48b88df5bf"
+        "outputId": "7a4d0156-6704-4452-c85e-5a369edf9dc1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "8\n",
-            "8  is even number\n"
+            "58\n",
+            "58  is even number\n"
           ]
         }
       ],
@@ -795,16 +802,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "_mYGcsFzAoZO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_mYGcsFzAoZO",
+        "outputId": "7d20a9d3-7795-4ed5-9996-f6af149e4ccb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number95\n",
+            "Number 95 is greater than or equal to 0 and less than 100\n",
+            "Number 95 is greater than or equal to 0 and less than 100\n"
+          ]
+        }
+      ],
       "source": [
         "number = int(input('Enter a number'))\n",
+        "if number < 0:\n",
+        "    print (f'Number {number} is negative')\n",
+        "else:\n",
+        "    if number < 100:\n",
+        "        print (f'Number {number} is greater than or equal to 0 and less than 100')\n",
         "\n",
         "if number < 0:\n",
         "    print (f'Number {number} is negative')\n",
+        "\n",
         "else:\n",
         "    if number < 100:\n",
         "        print (f'Number {number} is greater than or equal to 0 and less than 100')\n",
@@ -836,19 +863,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "r_KS_nDSAoZQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r_KS_nDSAoZQ",
+        "outputId": "7a011153-6027-4ec1-8d8e-e5c740c06d20"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number78\n",
+            "Enter a number85\n",
+            "Number 85 is in range 2\n",
+            "Number 85 is in range 2\n",
+            "Number 85 is in range 2\n"
+          ]
+        }
+      ],
       "source": [
+        "number = int(input('Enter a number'))\n",
         "number = int(input('Enter a number'))\n",
         "\n",
         "if number < 0:\n",
+        "    # Range 1: less than 0\n",
         "    range = 1\n",
         "else:\n",
-        "    if # complete the code\n",
-        "        range = 2"
+        "    # Range 2: 0 <= number < 100\n",
+        "    if number < 100:\n",
+        "        range = 2\n",
+        "    # Range 3: number >= 100\n",
+        "    else:\n",
+        "        range = 3\n",
+        "\n",
+        "print(f'Number {number} is in range {range}')\n",
+        "\n",
+        "print (f'Number {number} is in range {range}')\n",
+        "\n",
+        "print (f'Number {number} is in range {range}')"
       ]
     },
     {
@@ -873,11 +928,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "NAVbtTvvAoZQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NAVbtTvvAoZQ",
+        "outputId": "4aefe70e-5341-4c02-b8c0-e990848c0964"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number 65\n",
+            "Enter a number 78\n",
+            "Enter a number 95\n",
+            "The smallest number is 65\n"
+          ]
+        }
+      ],
       "source": [
         "num1 = int(input('Enter a number '))\n",
         "num2 = int(input('Enter a number '))\n",
@@ -887,7 +957,10 @@
         "    # Complete the code. Only use Nested-If structure. If - else\n",
         "    # No and/or\n",
         "    # No elif\n",
-        ""
+        "    if num1 < num3:\n",
+        "        print (f'The smallest number is {num1}')\n",
+        "    else:\n",
+        "        print (f'The smallest number is {num3}')\n"
       ]
     },
     {
@@ -925,11 +998,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "PgiF6JigAoZS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PgiF6JigAoZS",
+        "outputId": "7b0e3f95-fa93-42b6-fb7b-15d241e423b5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your score84\n"
+          ]
+        }
+      ],
       "source": [
         "score = int(input(\"Enter your score\"))\n",
         "\n",
@@ -940,11 +1025,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
-        "id": "UlBxpx8jAoZS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UlBxpx8jAoZS",
+        "outputId": "5d6528f9-c032-4f6b-ff1f-2df3e0fdd74b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your score95\n",
+            "95  is between 0 and 100 \n"
+          ]
+        }
+      ],
       "source": [
         "# Take the score\n",
         "# Check the scoer is between 0 and 100\n",
@@ -975,18 +1073,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
-        "id": "HwIN8vU7AoZT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HwIN8vU7AoZT",
+        "outputId": "899a8aac-76b2-455b-a02a-f55babb5bfcd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the num11\n",
+            "Enter the num24\n",
+            "Enter the num1-5\n",
+            "Enter the num223\n",
+            "num1 is positive\n"
+          ]
+        }
+      ],
       "source": [
+        "num1 = int(input('Enter the num1'))\n",
+        "num2 = int(input('Enter the num2'))\n",
+        "\n",
         "num1 = int(input('Enter the num1'))\n",
         "num2 = int(input('Enter the num2'))\n",
         "\n",
         "if num1 > 0 and num2 > 0:\n",
         "    print ('Two values are positive')\n",
-        "elif # complete the code\n"
+        "elif num1 > 0 and num2 < 0:\n",
+        "    print ('num1 is positive and num2 is negative')\n",
+        "else:\n",
+        "    print ('num1 is positive')\n"
       ]
     },
     {
@@ -1008,19 +1128,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
-        "id": "gVWVjSfxAoZU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gVWVjSfxAoZU",
+        "outputId": "23cfbaac-d188-42b0-ed3a-553b0dc50b60"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the num11\n",
+            "Enter the num22\n",
+            "Two values are positive\n",
+            "Enter the num13\n",
+            "Enter the num24\n",
+            "Two values are positive\n"
+          ]
+        }
+      ],
       "source": [
         "num1 = int(input('Enter the num1'))\n",
         "num2 = int(input('Enter the num2'))\n",
         "\n",
         "if num1 > 0:\n",
         "    # complete the code\n",
+        "    if num2 > 0:\n",
+        "        print ('Two values are positive')\n",
+        "    else:\n",
+        "        print ('num2 is positive')\n",
+        "num1 = int(input('Enter the num1'))\n",
+        "num2 = int(input('Enter the num2'))\n",
+        "\n",
+        "if num1 > 0:\n",
+        "    # complete the code\n",
+        "    if num2 > 0:\n",
+        "        print ('Two values are positive')\n",
+        "    else:\n",
+        "        print ('num2 is positive')\n",
         "else:\n",
-        "    # complete the code"
+        "    print ('num1 is positive')"
       ]
     },
     {
@@ -1049,17 +1199,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
-        "id": "9REdpAtfAoZV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9REdpAtfAoZV",
+        "outputId": "2f06621a-0b67-4c2b-dc15-7d01e54f0219"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "One of two values are less than 0\n"
+          ]
+        }
+      ],
       "source": [
+        "num1 = -10\n",
         "num1 = -10\n",
         "num2 = 20\n",
         "\n",
-        "if # complete your code\n",
-        "    print ('One of two values are less than 0')\n"
+        "if num1 < 0 or num2 < 0:\n",
+        "    print ('One of two values are less than 0')"
       ]
     },
     {
@@ -1082,17 +1245,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
-        "id": "WP_aAx0QAoZW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WP_aAx0QAoZW",
+        "outputId": "015f9676-6652-4ac1-8cd5-43acfcfcd060"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number45\n",
+            "num1 is greater than 0 and less than 100\n"
+          ]
+        }
+      ],
       "source": [
         "num1 = int(input('Enter a number'))\n",
         "\n",
-        "if # complete the same condition without \"and\" operator as num1 > 0 and num1 < 100\n",
-        "# if num1 > 0 and num1 < 100:\n",
-        "    print ('num1 is greater than 0 and less than 100')"
+        "# complete the same condition without \"and\" operator as num1 > 0 and num1 < 100\n",
+        "if 0 < num1 < 100:\n",
+        "    print ('num1 is greater than 0 and less than 100')\n",
+        ""
       ]
     },
     {
@@ -1111,15 +1288,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
-        "id": "dWUWt77nAoZX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dWUWt77nAoZX",
+        "outputId": "376d456e-fc9b-4b34-bbfa-99b7f11b754a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number78\n",
+            "The number is positive.\n"
+          ]
+        }
+      ],
       "source": [
         "number = int(input('Enter the number'))\n",
         "\n",
-        "if # complete the code"
+        "if number > 0:\n",
+        "    print(\"The number is positive.\")\n",
+        "elif number == 0:\n",
+        "    print(\"The number is zero.\")\n",
+        "else:\n",
+        "    print(\"The number is negative.\")"
       ]
     },
     {
@@ -1143,15 +1338,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
-        "id": "kRan4y9kAoZX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kRan4y9kAoZX",
+        "outputId": "3ccdef1e-38d6-401a-821f-077a7f87d269"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Condition True\n",
+            "Condition True\n"
+          ]
+        }
+      ],
       "source": [
-        "num = # set your value to num to make the conditino True\n",
+        "num = -5 # set your value to num to make the conditino True\n",
         "\n",
-        "if num < 0 and num > 100:\n",
+        "if num < 0 or num > 100:\n",
+        "    print ('Condition True')\n",
         "    print ('Condition True')"
       ]
     },
